@@ -49,6 +49,7 @@
     <Compile Include="Message.cs" />
     <Compile Include="Processors\BaseProcessor.cs" />
     <Compile Include="Processors\MethodInvoker.cs" />
+    <Compile Include="Processors\PipelineEndProcessor.cs" />
     <Compile Include="Processors\PipelineProcessor.cs" />
     <Compile Include="Properties.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -57,6 +58,7 @@
     <Compile Include="Providers\ProcessorRouteProvider.cs" />
     <Compile Include="Providers\IRouteProvider.cs" />
     <Compile Include="Providers\ToRouteProvider.cs" />
+    <Compile Include="Utilities\PostThread.cs" />
     <Compile Include="Utilities\ToAddressUtilities.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
