@@ -4,10 +4,13 @@
     using System.Collections.Generic;
     using System.Linq;
     using System.Text;
+    using System.Threading;
+
+    using AjProcessor.Utilities;
 
     public class BaseProcessor : IProcessor
     {
-        public event MessageHandler ForwardMessage;
+        private List<IProcessor> processors = new List<IProcessor>();
 
         public virtual void ProcessMessage(Message message)
         {
@@ -16,8 +19,15 @@
 
         public virtual void PostMessage(Message message)
         {
-            if (this.ForwardMessage != null)
-                this.ForwardMessage(message);
+            foreach (IProcessor processor in this.processors)
+            {
+                (new PostThread(processor)).PostMessage(message);
+            }
+        }
+
+        public virtual void RegisterProcessor(IProcessor processor)
+        {
+            this.processors.Add(processor);
         }
     }
 }
